remove Guava dependency