@@ -1,11 +1,12 @@
 package net.femtoparsec.tools.state;
 
-import com.google.common.collect.ImmutableMap;
 import fpc.tools.lang.MapTool;
 import fpc.tools.state.RemoteData;
 import fpc.tools.state.RemoteMap;
 import lombok.EqualsAndHashCode;
 import lombok.NonNull;
+
+import java.util.Map;
 
 /**
  * An immutable map with convenient methods to get a modified
@@ -16,7 +17,7 @@ import lombok.NonNull;
 public class FPCRemoteMap<K, V> extends FPCRemoteMapBase<K,V, FPCRemoteMap<K,V>> implements RemoteMap<K,V> {
 
     @SuppressWarnings("rawtypes")
-    public static final FPCRemoteMap EMPTY = new FPCRemoteMap<>(ImmutableMap.of());
+    public static final FPCRemoteMap EMPTY = new FPCRemoteMap<>(Map.of());
 
     @SuppressWarnings("unchecked")
     public static <K,V> FPCRemoteMap<K,V> empty() {
@@ -24,11 +25,11 @@ public class FPCRemoteMap<K, V> extends FPCRemoteMapBase<K,V, FPCRemoteMap<K,V>>
     }
 
     @NonNull
-    public static <K,V> FPCRemoteMap<K,V> create(@NonNull ImmutableMap<K,V> data) {
+    public static <K,V> FPCRemoteMap<K,V> create(@NonNull Map<K,V> data) {
         return new FPCRemoteMap<>(MapTool.mapValue(data, RemoteData::loaded));
     }
 
-    public FPCRemoteMap(@NonNull ImmutableMap<K, RemoteData<V>> content) {
+    public FPCRemoteMap(@NonNull Map<K, RemoteData<V>> content) {
         super(content, FPCRemoteMap::new);
     }
 
