@@ -1,42 +1,41 @@
 package fpc.tools.validation;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import lombok.Getter;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 
+import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 
 @RequiredArgsConstructor
 @Getter
 public class ValidationResult {
 
     @NonNull
-    private final ImmutableSet<String> validatedFields;
+    private final Set<String> validatedFields;
 
     @NonNull
-    private final ImmutableMap<String, ImmutableList<ValidationError>> errors;
+    private final Map<String, List<ValidationError>> errors;
 
     @NonNull
     public static ValidationResult empty() {
-        return new ValidationResult(ImmutableSet.of(), ImmutableMap.of());
+        return new ValidationResult(Set.of(), Map.of());
     }
 
-    @NonNull
     public boolean isValid() {
         return errors.isEmpty();
     }
 
     @NonNull
-    public ImmutableList<ValidationError> getErrors(@NonNull String fieldName) {
-        return errors.getOrDefault(fieldName,ImmutableList.of());
+    public List<ValidationError> getErrors(@NonNull String fieldName) {
+        return errors.getOrDefault(fieldName,List.of());
     }
 
     @NonNull
     public Optional<ValidationError> getFirstError(@NonNull String fieldName) {
-        final ImmutableList<ValidationError> fieldErrors = errors.get(fieldName);
+        final List<ValidationError> fieldErrors = errors.get(fieldName);
         if (fieldErrors == null || fieldErrors.isEmpty()) {
             return Optional.empty();
         }
